<resources>
    <string name="acc_add">Add configuration</string>
    <string name="acc_add_asset">Add asset source</string>
    <string name="acc_add_member">Add proxy chain member</string>
    <string name="acc_add_rule">Add routing rule</string>
    <string name="acc_add_subscription">Add subscription</string>
    <string name="acc_back">Back</string>
    <string name="acc_clear_log">Clear log</string>
    <string name="acc_copy_log">Copy log</string>
    <string name="acc_delete">Delete</string>
    <string name="acc_download_file">Download asset files</string>
    <string name="acc_edit">Edit</string>
    <string name="acc_locked">This rule is kept when importing presets</string>
    <string name="acc_more">More options</string>
    <string name="acc_open_menu">Open navigation menu</string>
    <string name="acc_per_app_proxy_information">Per-app proxy information</string>
    <string name="acc_qr_code">QR code</string>
    <string name="acc_refresh">Refresh log</string>
    <string name="acc_remove">Remove proxy chain member</string>
    <string name="acc_save">Save</string>
    <string name="acc_search">Search</string>
    <string name="acc_select_image">Select image to scan</string>
    <string name="acc_share_log">Share log</string>
    <string name="acc_share_subscription">Share subscription link</string>
    <string name="acc_start">Start service</string>
    <string name="acc_start_scanner">Start QR scanner</string>
    <string name="acc_stop">Stop service</string>
    <string name="acc_stop_scanner">Stop QR scanner</string>
    <string name="acc_turn_torch_off">Turn flashlight off</string>
    <string name="acc_turn_torch_on">Turn flashlight on</string>
    <string name="acc_update_subscriptions">Update subscriptions</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_stop_service">Stop service</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">kanVPN</string>
    <string name="app_picker_unknown_app">Unknown app (UID not recognized)</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_widget_name">Switch</string>
    <string name="asset_geo_files_sources">Geo file source (optional)</string>
    <string name="backup_location_local">Local</string>
    <string name="backup_location_webdav">WebDAV</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="confirm_delete_asset_file">Are you sure you want to delete the asset file \"%1$s\"?</string>
    <string name="confirm_delete_asset_source">Are you sure you want to delete this asset source?</string>
    <string name="per_app_proxy_settings">Per-app settings</string>
    <string name="routing_settings_domain">domain</string>
    <string name="routing_settings_ip">ip</string>
    <string name="routing_settings_locked">Locked, keep this rule when import presets</string>
    <string name="routing_settings_network">network</string>
    <string name="routing_settings_outbound_tag">outboundTag</string>
    <string name="routing_settings_port">port</string>
    <string name="routing_settings_protocol">protocol</string>
    <string name="routing_settings_protocol_tip">[http,tls,bittorrent]</string>
    <string name="routing_settings_rule_title">Routing Rule Settings</string>
    <string name="routing_settings_tips">"Separated by commas(,), 
choose domain or ip or process"</string>
    <string name="routing_settings_title">Routing Settings</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_xhttp_extra">XHTTP Extra raw JSON, format: { XHTTPObject }</string>
    <string name="sub_setting_remarks">remarks</string>
    <string name="summary_pref_append_http_proxy">Allow browsers and supported apps to use the HTTP proxy directly instead of the virtual network interface (Android 10+).</string>
    <string name="summary_pref_auto_remove_invalid_after_test">Test results may not be accurate; deleted config cannot be recovered.</string>
    <string name="summary_pref_auto_sort_after_test">Test results may not be accurate;</string>
    <string name="summary_pref_auto_update_subscription">Update your subscriptions automatically at set intervals in the background. Depending on the device, this feature may not always work</string>
    <string name="summary_pref_confirm_remove">Whether deleting a config requires a second confirmation by the user</string>
    <string name="summary_pref_delay_test_url">URL</string>
    <string name="summary_pref_dns_hosts">domain:address,…</string>
    <string name="summary_pref_domestic_dns">DNS</string>
    <string name="summary_pref_double_column_display">Display the profile list in two columns to fit more content on screen.</string>
    <string name="summary_pref_fake_dns_enabled">FakeDNS returns synthetic IP addresses for domain lookups (faster, but may not work with some apps).</string>
    <string name="summary_pref_ip_api_url">URL</string>
    <string name="summary_pref_is_booted">Automatically connects to the selected server at startup, which may be unsuccessful</string>
    <string name="summary_pref_local_dns_enabled">DNS processed by core‘s DNS module (Recommended if you need routing bypassing LAN and mainland addresses)</string>
    <string name="summary_pref_mux_enabled">"Faster, but it may cause unstable connectivity
Customize how to handle TCP, UDP and QUIC below"</string>
    <string name="summary_pref_prefer_ipv6">Prefer IPv6 addresses when resolving domain names</string>
    <string name="summary_pref_proxy_sharing_enabled">Other devices can connect to proxy by your IP address through local proxy. Only enable in trusted networks to avoid unauthorized connections</string>
    <string name="summary_pref_remote_dns">DNS</string>
    <string name="summary_pref_route_only_enabled">Use the sniffed domain name for routing only, and keep the target address as the IP address.</string>
    <string name="summary_pref_sniffing_enabled">Detect destination domains from traffic (enabled by default).</string>
    <string name="summary_pref_speed_enabled">"Show current speeds in the notification.
The icon indicates whether proxy or direct traffic is dominant."</string>
    <string name="summary_pref_use_hev_tunnel">When enabled, TUN will use hev-socks5-tunnel; otherwise, it will use xray-core.</string>
    <string name="title_about">About</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_configuration_backup_restore">Backup &amp; Restore</string>
    <string name="title_core_loglevel">Log Level</string>
    <string name="title_core_settings">Core Settings</string>
    <string name="title_fragment_settings">Fragment Settings</string>
    <string name="title_language">Language</string>
    <string name="title_logcat">Logcat</string>
    <string name="title_mode">Mode</string>
    <string name="title_mux_settings">Mux Settings</string>
    <string name="title_outbound_domain_resolve_method">Outbound domain resolution</string>
    <string name="title_pref_append_http_proxy">Add HTTP proxy to VPN</string>
    <string name="title_pref_auto_remove_invalid_after_test">Auto delete invalid config after testing</string>
    <string name="title_pref_auto_sort_after_test">Auto sort after testing</string>
    <string name="title_pref_auto_update_interval">Auto Update Interval (Minutes, Min value 15)</string>
    <string name="title_pref_auto_update_subscription">Automatic update subscriptions</string>
    <string name="title_pref_confirm_remove">Delete config confirmation</string>
    <string name="title_pref_delay_test_url">True delay test URL</string>
    <string name="title_pref_dns_hosts">DNS hosts (Format: domain:address,…)</string>
    <string name="title_pref_domestic_dns">Domestic DNS (Optional)</string>
    <string name="title_pref_double_column_display">Use two-column layout</string>
    <string name="title_pref_fake_dns_enabled">Enable FakeDNS</string>
    <string name="title_pref_fragment_enabled">Enable Fragment</string>
    <string name="title_pref_fragment_interval">Fragment Interval (min-max)</string>
    <string name="title_pref_fragment_length">Fragment Length (min-max)</string>
    <string name="title_pref_fragment_packets">Fragment Packets</string>
    <string name="title_pref_hev_tunnel_loglevel">Hev Tun Log Level</string>
    <string name="title_pref_hev_tunnel_rw_timeout">Hev Tun read/write timeout (seconds) (tcp,udp default 300,60)</string>
    <string name="title_pref_ip_api_url">Current connection info test URL</string>
    <string name="title_pref_is_booted">Auto connect at startup</string>
    <string name="title_pref_local_dns_enabled">Enable local DNS</string>
    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="title_pref_mux_xudp_quic">Handling of QUIC in mux tunnel</string>
    <string name="title_pref_prefer_ipv6">Prefer IPv6</string>
    <string name="title_pref_promotion">Promotion</string>
    <string name="title_pref_proxy_sharing_enabled">Allow connections from the LAN</string>
    <string name="title_pref_remote_dns">Remote DNS (udp/tcp/https/quic)(Optional)</string>
    <string name="title_pref_route_only_enabled">Enable routeOnly</string>
    <string name="title_pref_sniffing_enabled">Enable Sniffing</string>
    <string name="title_pref_socks_port">Local proxy port</string>
    <string name="title_pref_speed_enabled">Enable speed display</string>
    <string name="title_pref_ui_mode_night">UI mode settings</string>
    <string name="title_pref_use_hev_tunnel">Enable Hev TUN Feature</string>
    <string name="title_pref_vpn_bypass_lan">Does VPN bypass LAN</string>
    <string name="title_pref_vpn_dns">VPN DNS (only IPv4/v6)</string>
    <string name="title_pref_vpn_interface_address">VPN Interface Address</string>
    <string name="title_pref_vpn_mtu">VPN MTU (default 1500)</string>
    <string name="title_server">Config</string>
    <string name="title_settings">Settings</string>
    <string name="title_sub_setting">Subscription group setting</string>
    <string name="title_ui_settings">UI settings</string>
    <string name="title_user_asset_setting">Asset files</string>
    <string name="title_vpn_settings">VPN Settings</string>
    <string name="title_webdav_pass">Password</string>
    <string name="title_webdav_remote_path">Remote directory (optional)</string>
    <string name="title_webdav_url">WebDAV server URL</string>
    <string name="title_webdav_user">Username</string>
    <string name="update_check_for_update">Check for update</string>
</resources>