<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/title_ui_settings">
        <CheckBoxPreference android:title="@string/title_pref_speed_enabled" android:key="pref_speed_enabled" android:summary="@string/summary_pref_speed_enabled" />
        <CheckBoxPreference android:title="@string/title_pref_confirm_remove" android:key="pref_confirm_remove" android:summary="@string/summary_pref_confirm_remove" />
        <CheckBoxPreference android:title="@string/title_pref_start_scan_immediate" android:key="pref_start_scan_immediate" android:summary="@string/summary_pref_start_scan_immediate" />
        <CheckBoxPreference android:title="@string/title_pref_double_column_display" android:key="pref_double_column_display" android:summary="@string/summary_pref_double_column_display" />
        <ListPreference android:entries="@array/language_select" android:title="@string/title_language" android:key="pref_language" android:summary="%s" android:defaultValue="auto" android:entryValues="@array/language_select_value" />
        <ListPreference android:entries="@array/ui_mode_night" android:title="@string/title_pref_ui_mode_night" android:key="pref_ui_mode_night" android:summary="%s" android:defaultValue="0" android:entryValues="@array/ui_mode_night_value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_vpn_settings">
        <CheckBoxPreference android:title="@string/title_pref_prefer_ipv6" android:key="pref_prefer_ipv6" android:summary="@string/summary_pref_prefer_ipv6" />
        <CheckBoxPreference android:title="@string/title_pref_local_dns_enabled" android:key="pref_local_dns_enabled" android:summary="@string/summary_pref_local_dns_enabled" />
        <CheckBoxPreference android:title="@string/title_pref_fake_dns_enabled" android:key="pref_fake_dns_enabled" android:summary="@string/summary_pref_fake_dns_enabled" />
        <CheckBoxPreference android:title="@string/title_pref_append_http_proxy" android:key="pref_append_http_proxy" android:summary="@string/summary_pref_append_http_proxy" />
        <EditTextPreference android:title="@string/title_pref_vpn_dns" android:key="pref_vpn_dns" android:summary="@string/summary_pref_remote_dns" />
        <ListPreference android:entries="@array/vpn_bypass_lan" android:title="@string/title_pref_vpn_bypass_lan" android:key="pref_vpn_bypass_lan" android:summary="%s" android:defaultValue="1" android:entryValues="@array/vpn_bypass_lan_value" />
        <ListPreference android:entries="@array/vpn_interface_address" android:title="@string/title_pref_vpn_interface_address" android:key="pref_vpn_interface_address_config_index" android:summary="%s" android:defaultValue="0" android:entryValues="@array/vpn_interface_address_value" />
        <EditTextPreference android:title="@string/title_pref_vpn_mtu" android:key="pref_vpn_mtu" android:summary="1500" android:inputType="number" />
        <CheckBoxPreference android:title="@string/title_pref_use_hev_tunnel" android:key="pref_use_hev_tunnel_v2" android:summary="@string/summary_pref_use_hev_tunnel" android:defaultValue="true" />
        <ListPreference android:entries="@array/hev_tunnel_loglevel" android:title="@string/title_pref_hev_tunnel_loglevel" android:key="pref_hev_tunnel_loglevel" android:summary="%s" android:defaultValue="warn" android:entryValues="@array/hev_tunnel_loglevel" />
        <EditTextPreference android:title="@string/title_pref_hev_tunnel_rw_timeout" android:key="pref_hev_tunnel_rw_timeout_v2" android:summary="300,60" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_core_settings">
        <CheckBoxPreference android:title="@string/title_pref_sniffing_enabled" android:key="pref_sniffing_enabled" android:summary="@string/summary_pref_sniffing_enabled" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/title_pref_route_only_enabled" android:key="pref_route_only_enabled" android:summary="@string/summary_pref_route_only_enabled" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/title_pref_proxy_sharing_enabled" android:key="pref_proxy_sharing_enabled" android:summary="@string/summary_pref_proxy_sharing_enabled" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/title_pref_allow_insecure" android:key="pref_allow_insecure" android:summary="@string/summary_pref_allow_insecure" android:defaultValue="false" />
        <EditTextPreference android:title="@string/title_pref_socks_port" android:key="pref_socks_port" android:summary="10808" android:inputType="number" />
        <EditTextPreference android:title="@string/title_pref_remote_dns" android:key="pref_remote_dns" android:summary="@string/summary_pref_remote_dns" />
        <EditTextPreference android:title="@string/title_pref_domestic_dns" android:key="pref_domestic_dns" android:summary="@string/summary_pref_domestic_dns" />
        <EditTextPreference android:title="@string/title_pref_dns_hosts" android:key="pref_dns_hosts" android:summary="@string/summary_pref_dns_hosts" />
        <ListPreference android:entries="@array/core_loglevel" android:title="@string/title_core_loglevel" android:key="pref_core_loglevel" android:summary="%s" android:defaultValue="warning" android:entryValues="@array/core_loglevel" />
        <ListPreference android:entries="@array/outbound_domain_resolve_method" android:title="@string/title_outbound_domain_resolve_method" android:key="pref_outbound_domain_resolve_method" android:summary="%s" android:defaultValue="1" android:entryValues="@array/outbound_domain_resolve_method_value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_mux_settings" app:initialExpandedChildrenCount="0">
        <CheckBoxPreference android:title="@string/title_pref_mux_enabled" android:key="pref_mux_enabled" android:summary="@string/summary_pref_mux_enabled" />
        <EditTextPreference android:title="@string/title_pref_mux_concurency" android:key="pref_mux_concurrency" android:summary="8" android:inputType="number" />
        <EditTextPreference android:title="@string/title_pref_mux_xudp_concurency" android:key="pref_mux_xudp_concurrency" android:summary="8" android:inputType="number" />
        <ListPreference android:entries="@array/mux_xudp_quic_entries" android:title="@string/title_pref_mux_xudp_quic" android:key="pref_mux_xudp_quic" android:summary="%s" android:defaultValue="reject" android:entryValues="@array/mux_xudp_quic_value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_fragment_settings" app:initialExpandedChildrenCount="0">
        <CheckBoxPreference android:title="@string/title_pref_fragment_enabled" android:key="pref_fragment_enabled" />
        <EditTextPreference android:title="@string/title_pref_fragment_length" android:key="pref_fragment_length" android:summary="50-100" />
        <EditTextPreference android:title="@string/title_pref_fragment_interval" android:key="pref_fragment_interval" android:summary="10-20" />
        <ListPreference android:entries="@array/fragment_packets" android:title="@string/title_pref_fragment_packets" android:key="pref_fragment_packets" android:summary="%s" android:defaultValue="tlshello" android:entryValues="@array/fragment_packets" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_sub_setting" app:initialExpandedChildrenCount="0">
        <CheckBoxPreference android:title="@string/title_pref_auto_update_subscription" android:key="pref_auto_update_subscription" android:summary="@string/summary_pref_auto_update_subscription" />
        <EditTextPreference android:title="@string/title_pref_auto_update_interval" android:key="pref_auto_update_interval" android:summary="1440" android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_advanced">
        <CheckBoxPreference android:title="@string/title_pref_is_booted" android:key="pref_is_booted" android:summary="@string/summary_pref_is_booted" />
        <CheckBoxPreference android:title="@string/title_pref_auto_remove_invalid_after_test" android:key="pref_auto_remove_invalid_after_test" android:summary="@string/summary_pref_auto_remove_invalid_after_test" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/title_pref_auto_sort_after_test" android:key="pref_auto_sort_after_test" android:summary="@string/summary_pref_auto_sort_after_test" android:defaultValue="false" />
        <EditTextPreference android:title="@string/title_pref_delay_test_url" android:key="pref_delay_test_url" android:summary="@string/summary_pref_delay_test_url" />
        <EditTextPreference android:title="@string/title_pref_ip_api_url" android:key="pref_ip_api_url" android:summary="@string/summary_pref_ip_api_url" />
        <ListPreference android:entries="@array/mode_entries" android:title="@string/title_mode" android:key="pref_mode" android:summary="%s" android:defaultValue="VPN" android:entryValues="@array/mode_value" />
    </PreferenceCategory>
</PreferenceScreen>