<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/group_main">
        <item android:icon="@drawable/ic_subscriptions_24dp" android:id="@id/sub_setting" android:title="@string/title_sub_setting" />
        <item android:icon="@drawable/ic_per_apps_24dp" android:id="@id/per_app_proxy_settings" android:title="@string/per_app_proxy_settings" />
        <item android:icon="@drawable/ic_routing_24dp" android:id="@id/routing_setting" android:title="@string/routing_settings_title" />
        <item android:icon="@drawable/ic_file_24dp" android:id="@id/user_asset_setting" android:title="@string/title_user_asset_setting" />
        <item android:icon="@drawable/ic_settings_24dp" android:id="@id/settings" android:title="@string/title_settings" />
    </group>
    <group android:id="@id/group_id2">
        <item android:icon="@drawable/ic_promotion_24dp" android:id="@id/promotion" android:title="@string/title_pref_promotion" />
        <item android:icon="@drawable/ic_logcat_24dp" android:id="@id/logcat" android:title="@string/title_logcat" />
        <item android:icon="@drawable/ic_check_update_24dp" android:id="@id/check_for_update" android:title="@string/update_check_for_update" />
        <item android:icon="@drawable/ic_restore_24dp" android:id="@id/backup_restore" android:title="@string/title_configuration_backup_restore" />
        <item android:icon="@drawable/ic_about_24dp" android:id="@id/about" android:title="@string/title_about" />
        <item android:enabled="false" android:id="@id/placeholder" android:title="" />
    </group>
</menu>