<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_spacing_dp16" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/et_webdav_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp8" android:hint="@string/title_webdav_url" android:inputType="textUri" />
        <EditText android:id="@id/et_webdav_user" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp8" android:hint="@string/title_webdav_user" />
        <EditText android:id="@id/et_webdav_pass" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp8" android:hint="@string/title_webdav_pass" android:inputType="textPassword" />
        <EditText android:id="@id/et_webdav_remote_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp8" android:hint="@string/title_webdav_remote_path" />
    </LinearLayout>
</ScrollView>