<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_spacing_dp16" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sub_setting_remarks" />
                <EditText android:id="@id/et_remarks" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <androidx.appcompat.widget.SwitchCompat android:id="@id/chk_locked" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routing_settings_locked" app:theme="@style/BrandedSwitch" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routing_settings_rule_title" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routing_settings_domain" />
                <EditText android:id="@id/et_domain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/routing_settings_tips" android:maxLines="10" android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routing_settings_ip" />
                <EditText android:id="@id/et_ip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/routing_settings_tips" android:maxLines="10" android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routing_settings_port" />
                <EditText android:id="@id/et_port" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routing_settings_protocol" />
                <EditText android:id="@id/et_protocol" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/routing_settings_protocol_tip" android:inputType="text" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routing_settings_network" />
                <EditText android:id="@id/et_network" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/routing_settings_network_tip" android:inputType="text" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routing_settings_outbound_tag" />
                <Spinner android:entries="@array/outbound_tag" android:id="@id/sp_outbound_tag" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp8" android:layout_marginBottom="@dimen/padding_spacing_dp8" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16" android:layout_marginBottom="@dimen/padding_spacing_dp16" />
    </LinearLayout>
</ScrollView>