<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_more_function" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_network" />
        <Spinner android:entries="@array/networks" android:id="@id/sp_network" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp8" android:layout_marginBottom="@dimen/padding_spacing_dp8" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:id="@id/sp_header_type_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_head_type" />
        <Spinner android:id="@id/sp_header_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp8" android:layout_marginBottom="@dimen/padding_spacing_dp8" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:id="@id/tv_request_host" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_request_host" />
        <EditText android:id="@id/et_request_host" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:id="@id/tv_path" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_path" />
        <EditText android:id="@id/et_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/layout_extra" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_xhttp_extra" />
        <EditText android:gravity="top" android:id="@id/et_extra" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="20" android:minLines="4" android:inputType="textMultiLine" />
    </LinearLayout>
</LinearLayout>