<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_server" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_remarks" />
        <EditText android:id="@id/et_remarks" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/server_lab_address3" />
        <EditText android:id="@id/et_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_spacing_dp16">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/server_lab_port3" />
        <EditText android:id="@id/et_port" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="number" />
    </LinearLayout>
</LinearLayout>